--- a/src/app/core/logger/logger.component.scss
+++ b/src/app/core/logger/logger.component.scss
@@ -1,1 +1,9 @@
-
+.error-http {
+	padding: 15px;
+	max-width: 1024px;
+	margin: 0 auto;
+	background: antiquewhite;
+	font-size: 13px;
+	font-family: monospace;
+	color: chocolate;
+}
