--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <div class="wrapper">
 	<section-header></section-header>
+	<app-logger></app-logger>
 	<router-outlet></router-outlet>
-
 	<section-value-proposition></section-value-proposition>
 	<section-footer></section-footer>
 	<section-svg></section-svg>
-
 </div>
