--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -35,7 +35,6 @@ img {
 }
 
 
-
 /*--------------------------------------------------
 Card Row
 --------------------------------------------------*/
@@ -69,6 +68,9 @@ Card Row
 
 
 .stars {
+	white-space: nowrap;
+	display: inline-block;
+
 	em {
 		display: inline-block;
 		order: 1;
@@ -78,17 +80,22 @@ Card Row
 		height: 12px;
 		text-indent: -9999px;
 		font-size: 0;
+		line-height: 1 !important;
+		vertical-align: text-top;
+		letter-spacing: 0;
+		white-space: nowrap;
+		font-style: normal;
 
 		&.superior {
-			font-size: 10px !important;
+			font-size: 9px !important;
 			font-weight: bold;
 			text-indent: 0;
 			color: $star-color;
 			mask-image: none;
 			background-color: transparent !important;
 			position: relative;
-			top: -1px;
 			left: 2px;
+			top: 2px;
 		}
 	}
 }
