--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,8 +6,12 @@ $secondary-color: #004d9a;
 $text-color: #5f5d63;
 $tit-color: #062638;
 $tertiary-color: #1677c0;
+$light-color: #fafafa;
 $border-color: #e0e0e0;
 $star-color: #fcb851;
+$rate-excellent: #72b244;
+$rate-good: #fab424;
+$rate-poor: #f84717;
 
 
 //--------------------------------------------------
