--- a/src/app/sections/filter/filter.component.html
+++ b/src/app/sections/filter/filter.component.html
@@ -1,19 +1,23 @@
 <p-accordion [multiple]="true">
 
-	<p-accordionTab [header]="group.name" [selected]="group.selected" *ngFor="let group of groups;">
-		<ul class="list">
-			<li class="list--item" *ngFor="let item of group.items; let i = index;">
-				<div class="checkbox" [ngSwitch]="group.type">
-					<label *ngSwitchCase="groupTypes.Rating">
-						<input type="checkbox" (change)="onToggle(item)">
-						<span><span class="stars"> <em *ngFor="let star of item.name.split('');" [ngClass]="{ superior: star === 'S' }">{{star}}</em> </span> <em>{{item.category}}</em> </span>
-					</label>
-					<label *ngSwitchDefault>
-						<input type="checkbox" (change)="onToggle(item)"> <span>{{item.name}} <em>{{item.category}}</em> </span>
-					</label>
-				</div>
-			</li>
-		</ul>
+	<p-accordionTab [header]="group.name" [(selected)]="group.selected" *ngFor="let group of groupsFiltered$ | async">
+		<ng-container *ngIf="group.visible">
+			<ul class="list">
+				<ng-container *ngFor="let item of group.items; let i = index;">
+					<li class="list--item" *ngIf="item.visible">
+						<div class="checkbox" [ngSwitch]="group.type">
+							<label *ngSwitchCase="groupTypes.Rating">
+								<input type="checkbox" [(ngModel)]="item.selected" (ngModelChange)="onToggle(item)">
+								<span><span class="stars"> <em *ngFor="let star of item.name.split('');" [ngClass]="{ superior: star === 'S' }">{{star}}</em> </span> <em>{{item.count}}</em> </span>
+							</label>
+							<label *ngSwitchDefault>
+								<input type="checkbox" [(ngModel)]="item.selected" (ngModelChange)="onToggle(item)"> <span>{{item.name}} <em>{{item.count}}</em> </span>
+							</label>
+						</div>
+					</li>
+				</ng-container>
+			</ul>
+		</ng-container>
 	</p-accordionTab>
 
 </p-accordion>
