--- a/src/app/sections/home-search/home-search.component.html
+++ b/src/app/sections/home-search/home-search.component.html
@@ -4,6 +4,6 @@
 			<div class="tit">Viaggia con tutta la qualità<br> e la garanzia di Eurospin</div>
 			<div class="subtit">Le offerte migliori ai prezzi più bassi</div>
 		</div>
-		<main-search></main-search>
+		<main-search (doSearch)="search.onSearch()"></main-search>
 	</div>
 </div>
