--- a/src/app/sections/search-result/search-result.component.html
+++ b/src/app/sections/search-result/search-result.component.html
@@ -22,7 +22,7 @@
 								</a>
 							</div>
 							<div class="hotel--location">
-								<span class="hotel--region">{{item.destinationRegion}}</span>&nbsp;<span class="hotel--town">{{item.destinationDescription}} ({{item.destinationProvince}})</span>
+								<span class="hotel--region">{{item.destinationNation}} {{item.destinationRegion}}</span>&nbsp;<span class="hotel--town">{{item.destinationDescription}} {{item.destinationProvince}}</span>
 							</div>
 						</div>
 						<div class="hotel--trust">
